# WAGH

./: README.md  Readme.md  apple.py  icob3nch.py  icobench.py  icobenchSigle.py  pyproject.toml  res4.json  res6.json  res7.json  res8.json
TODO/: coinmarketcap (copy).py  coinmarketcap.py  stomarket.py
wagh/: scrapinghub.yml  scrapy.cfg  setup.py
wagh/project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
wagh/wagh/: items.py  middlewares.py  pipelines.py  settings.py
wagh/wagh/spiders/: coinmarketcapUpcoming.py  icoholder.py  message.py  res.csv  res.json  res2.json  ress.json
