[tool.poetry]
name = "wagh"
version = "0.1.0"
description = ""
authors = ["AlessandroEren <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
bs4 = "^0.0.1"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
